package com.gelvt.gofdp.abstractfactory;

/**
 * Desc: 笔记本电脑
 * Author: Elvin Zeng
 * Date: 17-6-18.
 */
public interface Laptop {
    /**
     * 用笔记本写代码
     * @param operator 操作笔记本的人
     */
    void coding(String operator);
}
