package com.gelvt.gofdp.abstractfactory;

/**
 * Desc: 智能手表
 * Author: Elvin Zeng
 * Date: 17-6-18.
 */
public interface SmartWatch {
    /**
     * 显示当前时间
     */
    void displayCurrentTime();

    /**
     * 接听电话
     */
    void receivePhoneCall();
}
